✨ feat: fixed header on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,7 @@
+.homeHeader{
+  z-index: 10;
+}
+
 .homeBackground {
   position: absolute;
   top: 0;
@@ -10,6 +14,7 @@
 .homeTop {
   position: relative;
   isolation: isolate;
+  z-index: 1;
 }
 
 .homeMid {
@@ -18,6 +23,7 @@
   isolation: isolate;
   overflow: hidden;
   width: 100%;
+  z-index: 0;
 }
 
 .homeLuz {
